--- a/stories/pa/0141_ਮੁਰਗੀ-ਅਤੇ-ਕੰਨਖਜੂਰਾ_slides.html
+++ b/stories/pa/0141_ਮੁਰਗੀ-ਅਤੇ-ਕੰਨਖਜੂਰਾ_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>하마는 왜 털이 없을까요? - Global African Storybook</title>
+  <title>ਮੁਰਗੀ ਅਤੇ ਕੰਨਖਜੂਰਾ - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="하마는-왜-털이-없을까요" class="slide level1">
-<h1>하마는 왜 털이 없을까요?</h1>
+<section id="ਮਰਗ-ਅਤ-ਕਨਖਜਰ" class="slide level1">
+<h1>ਮੁਰਗੀ ਅਤੇ ਕੰਨਖਜੂਰਾ</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/02.jpg" /></p>
-<p>어느 날, 한 토끼가 강가를 걷고 있었어요.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/02.jpg" /></p>
+<p>ਮੁਰਗੀ ਅਤੇ ਕੰਨਖਜੂਰਾ ਦੋਸਤ ਸਨ। ਪਰ ਉਹ ਹਮੇਸ਼ਾ ਇਕ-ਦੂਜੇ ਦੇ ਨਾਲ ਮੁਕਾਬਲਾ ਕਰਦੇ ਸਨ। ਇਕ ਦਿਨ ਉਹਨਾਂ ਨੇ ਫੁੱਟਬਾਲ ਖੇਡਣ ਦਾ ਫੈਸਲਾ ਕੀਤਾ, ਇਹ ਵੇਖਣ ਲਈ ਕਿ ਵਧੀਆ ਖਿਡਾਰੀ ਕੌਣ ਸੀ।</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/03.jpg" /></p>
-<p>그 강가에는 하마도 있었는데, 하마는 산책을 하며 상쾌하고 푸른 풀을 먹고 있었어요.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/03.jpg" /></p>
+<p>ਉਹ ਫੁੱਟਬਾਲ ਦੇ ਮੈਦਾਨ ਵਿਚ ਗਏ ਅਤੇ ਆਪਣੀ ਖੇਡ ਸ਼ੁਰੂ ਕੀਤੀ। ਮੁਰਗੀ ਤੇਜ਼ ਸੀ, ਪਰ ਕੰਨਖਜੂਰਾ ਉਸ ਤੋਂ ਵੀ ਜ਼ਿਆਦਾ ਤੇਜ਼ ਸੀ। ਮੁਰਗੀ ਦੂਰ ਕਿੱਕ ਮਾਰਦੀ ਪਰ ਕੰਨਖਜੂਰਾ ਉਸ ਤੋਂ ਵੀ ਜ਼ਿਆਦਾ ਦੂਰ ਕਿੱਕ ਮਾਰਦਾ। ਮੁਰਗੀ ਚਿੜਚਿੜੀ ਹੋਣ ਲੱਗ ਪਈ।</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/04.jpg" /></p>
-<p>하마는 토끼가 자기 옆에 있다는것을 모르고 토끼의 발을 밟아 버렸어요. 토끼는 비명을 질렀고 하마에게 소리쳤어요, &quot;야 이 하마야! 너 지금 내 발 밟고 있는거 안보여?&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/04.jpg" /></p>
+<p>ਉਹਨਾਂ ਨੇ ਪੈਨਲਟੀ ਸ਼ੂਟਆਊਟ ਖੇਡਣ ਦਾ ਫੈਸਲਾ ਕੀਤਾ। ਪਹਿਲਾਂ ਕੰਨਖਜੂਰਾ ਗੋਲ ਕੀਪਰ ਬਣਿਆ। ਮੁਰਗੀ ਨੇ ਸਿਰਫ ਇੱਕ ਗੋਲ ਕੀਤਾ। ਫਿਰ ਮੁਰਗੀ ਦੀ ਗੋਲ ਕੀਪਰ ਬਣਨ ਦੀ ਵਾਰੀ ਆਈ।</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/05.jpg" /></p>
-<p>하마는 토끼에게 사과했어요, &quot;정말 미안해, 친구야. 너를 못봤어. 제발 용서해줘!&quot; 하지만 토끼는 하마의 말을 듣지 않고 계속 소리쳤어요, &quot;너 일부러 그랬잖아! 두고봐, 너도 언젠간 똑같이 당할거야!&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
+<p>ਕੰਨਖਜੂਰੇ ਨੇ ਬਾਲ ਨੂੰ ਕਿੱਕ ਕਰਕੇ ਗੋਲ ਕੀਤਾ। ਕੰਨਖਜੂਰੇ ਨੇ ਬਾਲ ਨੂੰ ਟਪਕਾ ਕੇ ਗੋਲ ਕੀਤਾ। ਕੰਨਖਜੂਰੇ ਨੇ ਬਾਲ ਨੂੰ ਸਿਰ ਮਾਰ ਕੇ ਗੋਲ ਕੀਤਾ। ਕੰਨਖਜੂਰੇ ਨੇ ਪੰਜ ਗੋਲ ਕੀਤੇ।</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
-<p>그러고는 토끼가 불에게 다가가 말했어요, &quot;저 하마가 풀을 먹으려고 물에서 나오면 불로 태워줘. 쟤가 나 밟았어!&quot; 불이 대답했어요, &quot;그래! 내 친구 토끼야. 너가 하라는 대로 할께.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/06.jpg" /></p>
+<p>ਮੁਰਗੀ ਗੁੱਸੇ ਵਿੱਚ ਸੀ ਕਿਉਂਕਿ ਉਹ ਹਾਰ ਗਈ। ਉਸ ਨੇ ਹਾਰ ਚੰਗੀ ਤਰ੍ਹਾਂ ਨਹੀ ਸੀ ਅਪਣਾਈ। ਕੰਨਖਜੂਰਾ ਹੱਸਣ ਲੱਗ ਪਿਆ ਕਿਉਂਕਿ ਉਸਦਾ ਦੋਸਤ ਖ਼ਲਬਲੀ ਮਚਾ ਰਿਹਾ ਸੀ।</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
-<p>잠시후, 하마는 강가에서 멀리 떨어진 곳에서 풀을 먹고 있었는데, 갑자기 불이 났어요. 그 불꽃이 하마한테 붙어서 하마의 털을 태우기 시작했죠.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/07.jpg" /></p>
+<p>ਮੁਰਗੀ ਬਹੁਤ ਗੁੱਸੇ ਵਿੱਚ ਸੀ ਕਿ ਉਸ ਨੇ ਚੁੰਝ ਖੋਲੀ ਅਤੇ ਕੰਨਖਜੂਰੇ ਨੂੰ ਨਿਗਲ ਗਈ।</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/08.jpg" /></p>
-<p>하마는 울음을 터뜨렸고 물가로 뛰어 갔어요. 하마의 모든 털이 불에 타 버렸어요. 하마는 울음을 멈추지 못했어요, &quot;내 털이 불에 다 타버렸어! 너가 내 털을 다 태워버렸어! 내 털들이 다 사라졌어! 내 아름답고 아름다운 털이!&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/08.jpg" /></p>
+<p>ਜਦ ਮੁਰਗੀ ਘਰ ਵਾਪਸ ਜਾ ਰਹੀ ਸੀ, ਉਸਨੂੰ ਕੰਨਖਜੂਰੇ ਦੀ ਮਾਂ ਮਿਲੀ। ਕੰਨਖਜੂਰੇ ਦੀ ਮਾਂ ਨੇ ਪੁੱਛਿਆ, &quot;ਕੀ ਤੂੰ ਮੇਰੇ ਬੱਚੇ ਨੂੰ ਦੇਖਿਆ ਹੈ?&quot; ਮੁਰਗੀ ਨੇ ਕੁਝ ਵੀ ਨਹੀਂ ਕਿਹਾ। ਕੰਨਖਜੂਰੇ ਦੀ ਮਾਂ ਚਿੰਤਤ ਸੀ।</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
-<p>토끼는 하마의 머리가 타서 좋았어요. 그래서 지금까지도 하마는 불이 두려워서 물밖으로 잘 나오지 않는 거래요.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
+<p>ਫਿਰ ਕੰਨਖਜੂਰੇ ਦੀ ਮਾਂ ਨੂੰ ਇੱਕ ਛੋਟੀ ਅਵਾਜ਼ ਸੁਣੀ। &quot;ਮੰਮੀ ਮੇਰੀ ਮਦਦ ਕਰੋ!&quot; ਅਵਾਜ਼ ਚੀਕ ਕੇ ਕਹਿੰਦੀ। ਕੰਨਖਜੂਰੇ ਦੀ ਮਾਂ ਨੇ ਆਲੇ-ਦੁਆਲੇ ਵੇਖਿਆ ਅਤੇ ਧਿਆਨ ਨਾਲ ਸੁਣਿਆ। ਅਵਾਜ਼ ਮੁਰਗੀ ਦੇ ਅੰਦਰੋਂ ਆ ਰਹੀ ਸੀ।</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,48 @@
 </section>
 <section class="slide level1">
 
-<h2 id="하마는-왜-털이-없을까요-1">하마는 왜 털이 없을까요?</h2>
-<strong>Text:</strong> Basilio Gimo, David Ker<br> <strong>Illustrations:</strong> Carol Liddiment<br> <strong>Translation:</strong> Michelle Kim<br> <strong>Language:</strong> Korean<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/10.jpg" /></p>
+<p>ਕੰਨਖਜੂਰੇ ਦੀ ਮਾਂ ਚੀਕੀ, “ਆਪਣੀ ਖਾਸ ਸ਼ਕਤੀ ਵਰਤੋ ਮੇਰੇ ਬੱਚੇ!” ਕੰਨਖਜੂਰੇ ਇੱਕ ਬੁਰੀ ਬਦਬੂ ਅਤੇ ਭਿਆਨਕ ਸੁਆਦ ਬਣਾ ਸਕਦੇ ਹਨ। ਮੁਰਗੀ ਬੀਮਾਰ ਮਹਿਸੂਸ ਕਰਨ ਲੱਗੀ।</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/11.jpg" /></p>
+<p>ਮੁਰਗੀ ਨੇ ਡਕਾਰ ਲਿਆ। ਫਿਰ ਉਸ ਨੇ ਨਿਗਲ ਕੇ ਥੁਕਿਆ। ਫਿਰ ਉਸ ਨੇ ਛਿੱਕਿਆ ਅਤੇ ਖੰਘਿਆ। ਫਿਰ ਹੋਰ ਖੰਘਿਆ। ਕੰਨਖਜੂਰਾ ਘਿਣਾਉਣਾ ਸੀ!</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/12.jpg" /></p>
+<p>ਮੁਰਗੀ ਖੰਘਦੀ ਰਹੀ ਜਦ ਤੱਕ ਉਸਨੇ ਕੰਨਖਜੂਰੇ ਨੂੰ ਪੇਟ ਵਿੱਚੋਂ ਨਾ ਬਾਹਰ ਖੰਘਿਆI ਕੰਨਖਜੂਰੇ ਦੀ ਮਾਂ ਅਤੇ ਉਸਦਾ ਬੱਚਾ ਇੱਕ ਰੁੱਖ ਤੇ ਛੁਪਣ ਲਈ ਚੜ੍ਹ ਗਏ।</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/13.jpg" /></p>
+<p>ਉਸ ਸਮੇਂ ਤੋਂ, ਮੁਰਗੀਆਂ ਅਤੇ ਕੰਨਖਜੂਰੇ ਦੁਸ਼ਮਣ ਬਣ ਗਏ।</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="ਮਰਗ-ਅਤ-ਕਨਖਜਰ-1">ਮੁਰਗੀ ਅਤੇ ਕੰਨਖਜੂਰਾ</h2>
+<strong>Text:</strong> Winny Asara<br> <strong>Illustrations:</strong> Winny Asara<br> <strong>Translation:</strong> Anu Gill<br> <strong>Language:</strong> Punjabi<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/why-hippos-have-no-hair'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/chicken-and-millipede'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
