--- a/stories/pa/0158_ਕੁਕੜੀ-ਅਤੇ-ਬਾਜ਼_slides.html
+++ b/stories/pa/0158_ਕੁਕੜੀ-ਅਤੇ-ਬਾਜ਼_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>하마는 왜 털이 없을까요? - Global African Storybook</title>
+  <title>ਕੁਕੜੀ ਅਤੇ ਬਾਜ਼ - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="하마는-왜-털이-없을까요" class="slide level1">
-<h1>하마는 왜 털이 없을까요?</h1>
+<section id="ਕਕੜ-ਅਤ-ਬਜ" class="slide level1">
+<h1>ਕੁਕੜੀ ਅਤੇ ਬਾਜ਼</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/02.jpg" /></p>
-<p>어느 날, 한 토끼가 강가를 걷고 있었어요.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/02.jpg" /></p>
+<p>ਇੱਕ ਸਮੇਂ ਕੁਕੜੀ ਅਤੇ ਬਾਜ਼ ਦੋਸਤ ਸਨ। ਉਹ ਹੋਰ ਸਾਰੇ ਪੰਛੀਆਂ ਦੇ ਨਾਲ ਅਮਨ ਨਾਲ ਰਹਿੰਦੇ ਸਨ। ਉਹਨਾਂ ਵਿੱਚੋਂ ਕੋਈ ਵੀ ਉੱਡ ਨਹੀਂ ਸਕਦਾ ਸੀ।</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/03.jpg" /></p>
-<p>그 강가에는 하마도 있었는데, 하마는 산책을 하며 상쾌하고 푸른 풀을 먹고 있었어요.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
+<p>ਇਕ ਦਿਨ ਦੇਸ਼ ਵਿੱਚ ਕਾਲ ਪਿਆ ਹੋਇਆ ਸੀ। ਬਾਜ਼ ਨੂੰ ਭੋਜਨ ਪ੍ਰਾਪਤ ਕਰਨ ਲਈ ਬਹੁਤ ਹੀ ਦੂਰ ਜਾਣਾ ਪਿਆ। ਉਹ ਬਹੁਤ ਹੀ ਥੱਕੀ ਹੋਈ ਵਾਪਸ ਆਈ। &quot;ਸਫ਼ਰ ਕਰਨ ਦਾ ਕੋਈ ਸੌਖਾ ਤਰੀਕਾ ਜ਼ਰੂਰ ਹੋਵੇਗਾ!&quot; ਬਾਜ਼ ਨੇ ਕਿਹਾ।</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/04.jpg" /></p>
-<p>하마는 토끼가 자기 옆에 있다는것을 모르고 토끼의 발을 밟아 버렸어요. 토끼는 비명을 질렀고 하마에게 소리쳤어요, &quot;야 이 하마야! 너 지금 내 발 밟고 있는거 안보여?&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
+<p>ਰਾਤ ਨੂੰ ਚੰਗੀ ਨੀਂਦ ਦੇ ਬਾਅਦ, ਕੁਕੜੀ ਨੂੰ ਇੱਕ ਸ਼ਾਨਦਾਰ ਵਿਚਾਰ ਆਇਆ। ਉਹ ਆਪਣੇ ਸਾਰੇ ਪੰਛੀ ਦੋਸਤਾਂ ਦੇ ਡਿੱਗੇ ਖੰਭ ਇਕੱਠੇ ਕਰਨ ਲੱਗ ਪਈ। “ਆਪਾਂ ਇਹਨਾਂ ਖੰਭਾਂ ਨੂੰ ਆਪਣੇ ਖੰਭਾਂ ਉੱਪਰ ਸਿਊਂ ਸਕਦੇ ਹਾਂ,” ਉਸ ਨੇ ਕਿਹਾ। “ਸ਼ਾਇਦ ਇਸ ਨਾਲ ਸਫ਼ਰ ਕਰਨਾ ਆਸਾਨ ਹੋ ਜਾਵੇਗਾ।”</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/05.jpg" /></p>
-<p>하마는 토끼에게 사과했어요, &quot;정말 미안해, 친구야. 너를 못봤어. 제발 용서해줘!&quot; 하지만 토끼는 하마의 말을 듣지 않고 계속 소리쳤어요, &quot;너 일부러 그랬잖아! 두고봐, 너도 언젠간 똑같이 당할거야!&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/05.jpg" /></p>
+<p>ਸਾਰੇ ਪਿੰਡ ਵਿੱਚ ਸਿਰਫ ਬਾਜ਼ ਕੋਲ ਸੂਈ ਸੀ ਇਸ ਲਈ ਉਸ ਨੇ ਸਿਊਣਾ ਸ਼ੁਰੂ ਕੀਤਾ। ਉਸ ਨੇ ਆਪਣੇ ਆਪ ਲਈ ਸੁੰਦਰ ਖੰਭਾਂ ਦਾ ਜੋੜਾ ਬਣਾਇਆ ਅਤੇ ਕੁਕੜੀ ਦੇ ਉੱਪਰ ਉੱਚੀ ਉੱਡੀ। ਕੁਕੜੀ ਨੇ ਸੂਈ ਉਧਾਰ ਲਈ ਪਰ ਸਿਲਾਈ ਕਰਦੀ ਥੱਕ ਗਈ। ਉਸ ਨੇ ਅਲਮਾਰੀ ਤੇ ਸੂਈ ਰੱਖੀ ਅਤੇ ਉਸ ਦੇ ਬੱਚਿਆਂ ਲਈ ਭੋਜਨ ਤਿਆਰ ਕਰਨ ਲਈ ਰਸੋਈ ਵਿੱਚ ਚਲੀ ਗਈ।</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
-<p>그러고는 토끼가 불에게 다가가 말했어요, &quot;저 하마가 풀을 먹으려고 물에서 나오면 불로 태워줘. 쟤가 나 밟았어!&quot; 불이 대답했어요, &quot;그래! 내 친구 토끼야. 너가 하라는 대로 할께.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
+<p>ਪਰ ਹੋਰ ਪੰਛੀਆਂ ਨੇ ਵੀ ਬਾਜ਼ ਨੂੰ ਦੂਰ ਉੱਡਦੇ ਵੇਖਿਆ। ਉਹਨਾਂ ਨੇ ਆਪਣੇ ਲਈ ਵੀ ਖੰਭ ਬਣਾਉਣ ਲਈ ਕੁਕੜੀ ਤੋਂ ਸੂਈ ਉਧਾਰ ਲਈ। ਜਲਦੀ ਹੀ ਸਾਰੇ ਅਸਮਾਨ ਵਿੱਚ ਪੰਛੀ ਉੱਡਦੇ ਫ਼ਿਰਦੇ ਸਨ।</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
-<p>잠시후, 하마는 강가에서 멀리 떨어진 곳에서 풀을 먹고 있었는데, 갑자기 불이 났어요. 그 불꽃이 하마한테 붙어서 하마의 털을 태우기 시작했죠.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/07.jpg" /></p>
+<p>ਜਦ ਆਖਰੀ ਪੰਛੀ ਸੂਈ ਵਾਪਸ ਦੇਣ ਆਇਆ, ਕੁਕੜੀ ਉਥੇ ਨਹੀ ਸੀ। ਉਸ ਦੇ ਬੱਚਿਆਂ ਨੇ ਸੂਈ ਲਈ ਅਤੇ ਉਸ ਦੇ ਨਾਲ ਖੇਡਣ ਲੱਗ ਪਏ। ਜਦ ਉਹ ਖੇਡ ਕੇ ਥੱਕ ਗਏ, ਉਹਨਾਂ ਨੇ ਰੇਤ ਵਿੱਚ ਸੂਈ ਛੱਡ ਦਿੱਤੀ।</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/08.jpg" /></p>
-<p>하마는 울음을 터뜨렸고 물가로 뛰어 갔어요. 하마의 모든 털이 불에 타 버렸어요. 하마는 울음을 멈추지 못했어요, &quot;내 털이 불에 다 타버렸어! 너가 내 털을 다 태워버렸어! 내 털들이 다 사라졌어! 내 아름답고 아름다운 털이!&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/08.jpg" /></p>
+<p>ਉਸ ਸ਼ਾਮ ਨੂੰ ਬਾਜ਼ ਵਾਪਸ ਆ ਗਈ। ਉਸ ਨੇ ਖੰਭ ਬੰਨ੍ਹਣ ਲਈ ਸੂਈ ਮੰਗੀ ਜੋ ਸਫ਼ਰ ਦੇ ਦੌਰਾਨ ਢਿੱਲੇ ਹੋ ਗਏ ਸਨ। ਕੁਕੜੀ ਨੇ ਅਲਮਾਰੀ ਉਤੇ ਵੇਖਿਆ। ਉਸ ਨੇ ਰਸੋਈ ਵਿੱਚ ਵੇਖਿਆ। ਉਸ ਨੇ ਵਿਹੜੇ ਵਿੱਚ ਵੇਖਿਆ। ਪਰ ਸੂਈ ਕਿਤੇ ਵੀ ਨਹੀਂ ਸੀ।</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
-<p>토끼는 하마의 머리가 타서 좋았어요. 그래서 지금까지도 하마는 불이 두려워서 물밖으로 잘 나오지 않는 거래요.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
+<p>&quot;ਬਸ ਮੈਨੂੰ ਇੱਕ ਦਿਨ ਦਿਓ,&quot; ਕੁਕੜੀ ਨੇ ਬਾਜ਼ ਅੱਗੇ ਬੇਨਤੀ ਕੀਤੀ। &quot;ਫਿਰ ਤੁਸੀਂ ਆਪਣੇ ਖੰਭ ਡੀਕ ਕਰ ਸਕਦੇ ਹੋ ਅਤੇ ਦੋਬਾਰਾ ਦੂਰ ਉੱਡਕੇ ਭੋਜਨ ਪ੍ਰਾਪਤ ਕਰ ਸਕਦੇ ਹੋ।&quot; &quot;ਬਸ ਇੱਕ ਹੋਰ ਦਿਨ,&quot; ਬਾਜ਼ ਨੇ ਕਿਹਾ। &quot;ਜੇਕਰ ਤੈਨੂੰ ਸੂਈ ਨਾ ਲੱਭੀ ਤਾਂ ਤੈਨੂੰ ਭੁਗਤਾਨ ਦੇ ਤੌਰ ਤੇ ਆਪਣਾ ਇੱਕ ਚੂਚਾ ਦੇਣਾ ਪਵੇਗਾ।&quot;</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,30 @@
 </section>
 <section class="slide level1">
 
-<h2 id="하마는-왜-털이-없을까요-1">하마는 왜 털이 없을까요?</h2>
-<strong>Text:</strong> Basilio Gimo, David Ker<br> <strong>Illustrations:</strong> Carol Liddiment<br> <strong>Translation:</strong> Michelle Kim<br> <strong>Language:</strong> Korean<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/10.jpg" /></p>
+<p>ਅਗਲੇ ਦਿਨ ਜਦ ਬਾਜ਼ ਵਾਪਸ ਆਈ, ਉਸਨੇ ਕੁਕੜੀ ਨੂੰ ਰੇਤ ਨੂੰ ਖੁਰਚ ਦੇ ਹੋਏ ਦੇਖਿਆ, ਪਰ ਸੂਈ ਉੱਥੇ ਨਹੀਂ ਸੀ। ਇਸ ਲਈ ਬਾਜ਼ ਬਹੁਤ ਹੀ ਤੇਜ਼ੀ ਨਾਲ ਥੱਲੇ ਉੱਡੀ ਆਈ ਅਤੇ ਇੱਕ ਚੂਚੇ ਨੂੰ ਫ਼ੜਿਆ। ਉਹ ਉਸ ਨੂੰ ਲੈ ਗਈ। ਉਸ ਤੋਂ ਬਾਅਦ, ਜਦ ਵੀ ਬਾਜ਼ ਆਉਂਦੀ, ਉਸ ਨੂੰ ਕੁਕੜੀ ਸੂਈ ਲਈ ਰੇਤ ਨੂੰ ਖੁਰਚਦੀ ਹੋਈ ਮਿਲਦੀ।</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
+<p>ਜਦੋਂ ਹੀ ਬਾਜ਼ ਦੇ ਖੰਭ ਦੀ ਪਰਛਾਂ ਜ਼ਮੀਨ ਤੇ ਪੈਂਦੀ, ਕੁਕੜੀ ਆਪਣੇ ਚੂਚਿਆਂ ਨੂੰ ਚੇਤਾਵਨੀ ਦਿੰਦੀ । “ਇਸ ਪੱਟੀ ਅਤੇ ਸੁੱਕੀ ਜ਼ਮੀਨ ਤੋਂ ਦੂਰ ਜਾਵੋ” ਉਹਨਾਂ ਨੇ ਜਵਾਬ ਦਿੱਤਾ: &quot;ਅਸੀਂ ਮੂਰਖ ਨਹੀ ਹਾਂ। ਅਸੀਂ ਚੱਲੇ ਜਾਵਾਂਗੇ।&quot;</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="ਕਕੜ-ਅਤ-ਬਜ-1">ਕੁਕੜੀ ਅਤੇ ਬਾਜ਼</h2>
+<strong>Text:</strong> Ann Nduku<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Anu Gill<br> <strong>Language:</strong> Punjabi<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/why-hippos-have-no-hair'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/hen-and-eagle'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
