--- a/stories/ko/0111_하마는-왜-털이-없을까요.html
+++ b/stories/ko/0111_하마는-왜-털이-없을까요.html
@@ -98,7 +98,7 @@ Basilio Gimo, David Ker<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
 
-<p>그래서 하마는 절대로 물가에서 벗어나지 않아요 왜냐하면 불에 타는 것이 너무 무섭기 때문이죠. 하마가 불에 탔을때 토끼는 정말 행복했어요, 그러곤 말했죠,”복수했다!”</p>
+<p>토끼는 하마의 머리가 타서 좋았어요. 그래서 지금까지도 하마는 불이 두려워서 물밖으로 잘 나오지 않는 거래요.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
